Loading older messages from the database

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,10 +19,16 @@
 
 
               <div class="ps-container ps-theme-default ps-active-y" id="chat-content" style="overflow-y: scroll !important; height:80vh !important;">
-                  
-            <button id="load_previous" class="btn btn-primary">Load previous messages</button>  
-                  
-              <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; height: 0px; right: 2px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 2px;"></div></div></div>
+
+
+              <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; height: 0px; right: 2px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 2px;"></div></div>
+
+                <div id="load_previous_host" class="w-100 text-center">  
+                    <button id="load_previous" onclick="loadPreviousMessages()" class="btn btn-primary my-3">Load previous messages</button>  
+                </div>  
+
+{#                <button id="load_previous" class="btn btn-primary">Load previous messages</button>#}
+              </div>
 
               <div class="publisher bt-1 border-light">
                 <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
@@ -51,34 +57,10 @@
   window.userId = {{ request.user.id }};  
   window.conversationId = {{ conversation.id }};  
 </script>  
-<script src="/static/chat.js"></script>  
+<script src="/static/chat.js"></script>
 <script>
-    function loadPreviousMessages() {  
-    // Convert the timestamp to the format your backend expects  
-    const timestampStr = earliestMessageTimestamp.toISOString();  
-  
-    // Make a GET request to your backend  
-    fetch(`/load_previous_messages/?timestamp=${timestampStr}&cid=${window.conversationId}`)  
-        .then(response => {  
-            if (!response.ok) {  
-                throw new Error(`HTTP error! status: ${response.status}`);  
-            }  
-            return response.json();  
-        })  
-        .then(data => {  
-            // Handle the response  
-            // Update `earliestMessageTimestamp` if necessary  
-            data.messages.forEach((message) => {  
-                update_chat(message, true);  // Pass true for the prepend parameter  
-            });  
-        })  
-        .catch(error => {  
-            console.error(`Error loading previous messages: ${error}`);  
-        });  
-}  
 
-
-</script>  
+</script>
 
 </body>
 </html>
