--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,39 @@
           </div>
           
           <hr class="hr-xs">
-
+        
+        <div class="row">
+            <div class="form-group col-md-6">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-user ti-user"></i></span>
+                  <input type="text" name="first_name" class="form-control" placeholder="First name" required>
+                </div>
+                  {% if errors.first_name %}
+                  <div class="errordiv ps-3">
+                      {% for i in errors.first_name %}
+                        {{ i.message }}
+                      {% endfor %}
+                  </div>
+                  {% endif %}
+              </div>
+              <div class="form-group col-md-6">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-user ti-user"></i></span>
+                  <input type="text" name="last_name" class="form-control" placeholder="Last name" required>
+                </div>
+                  {% if errors.last_name %}
+                  <div class="errordiv ps-3">
+                      {% for i in errors.last_name %}
+                        {{ i.last_name }}
+                      {% endfor %}
+                  </div>
+                  {% endif %}
+              </div>
+          </div>
+          
+          <hr class="hr-xs">
+        
+        
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-envelope ti-email"></i></span>
