Login error message addition

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             {% csrf_token %}
             {% if invalid %}
               <div class="errordiv w-100 text-center">
-              Login credentials invalid
+              Login credentials invalid.
               </div>
             {% endif %}
           <div class="form-group">
